update to 137, add a new planet

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -47,6 +47,7 @@ unit.degradation-solve.description = Fires electric ion shells at nearby enemies
 
 status.degradation-sanded.name = Sanded
 status.degradation-electric-resonated.name = Electric Resonated
+status.corroded.name = Corroded
 
 planet.degradation-omurlo.name = Omurlo
 
