--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -17,6 +17,8 @@ block.degradation-heavite-compressor.description = Compress iron and graphite to
 block.degradation-stirling-generator.name = Stirling Generator
 block.degradation-stirling-generator.description = Generate power with ethylene vent.
 block.degradation-ethylene-vent.name = Ethylene Vent
+block.degradation-quarry.name = Quarry
+block.degradation-quarry.description = mines front area of ores
 block.degradation-axe.name =Axe
 block.degradation-axe.description = Fires quadriparts homing missiles at enemies.
 block.degradation-spherical-lightning.name = Sphercial Lightning
@@ -27,6 +29,8 @@ block.degradation-finspray.name = Finspray
 block.degradation-finspray.description = Fires matter dust at enemies.
 block.degradation-miner.name = Miner
 block.degradation-miner.description = Put mines on enemies' only way.
+block.degradation-fracture.name = Fracture
+block.degradation-fracture.description = Shoots big plasma bullets.
 
 block.degradation-ore-iridium.name = Iridium
 block.degradation-ore-silver.name = Silver
