add Sprites, update bundle

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,8 @@
-mod.degradation.displayName = Degradation
+mod.degradation.name = Degradation
 mod.degradation.description = A WIP 136 mindustry JAVA mod,I WAS SAID DONOT BUILD OR PLAY IN GITHUB >:(
 
+item.degradation-silver.name = Iron
+item.degradation-silver.description = Used in basic buildings construct.
 item.degradation-silver.name = Silver
 item.degradation-silver.description = Used in electricity transport and building construct.
 item.degradation-heavite.name = Heavite
@@ -29,8 +31,15 @@ block.degradation-finspray.name = Finspray
 block.degradation-finspray.description = Fires matter dust at enemies.
 block.degradation-miner.name = Miner
 block.degradation-miner.description = Put mines on enemies' only way.
+block.degradation-sparkover.name = Sparkover
+block.degradation-sparkover.description = Shocks enemies when it's in range
 block.degradation-fracture.name = Fracture
 block.degradation-fracture.description = Shoots big plasma bullets.
+
+block.degradation-iridium-wall.name = Iridium Wall
+block.degradation-iridium-wall.description = Protects structures from enemy projectiles, periodically releasing electric shards upon contact.
+block.degradation-iridium-wall-large.name = Large Iridium Wall
+block.degradation-iridium-wall-large.description = Protects structures from enemy projectiles, periodically releasing shards upon contact.
 
 block.degradation-ore-iridium.name = Iridium
 block.degradation-ore-silver.name = Silver
@@ -39,6 +48,7 @@ unit.degradation-lancet.name = Lancet
 unit.degradation-lancet.description = Fires ion balls at nearby enemies.
 unit.degradation-raven.name = Raven
 unit.degradation-raven.description = Fires proton torpedoes at nearby enemies.
+
 unit.degradation-knife.name = Knife
 unit.degradation-knife.description = Launch stab attack at nearby enemies.
 
@@ -59,6 +69,9 @@ sector.degradation-launching-area.name = Launching Area
 sector.degradation-launching-area.description = This is the third planet's begin,take some irons there.
 sector.degradation-planetary-monitoring-center.name = Planetary Monitoring Center
 sector.degradation-planetary-monitoring-center.description = The enemy detects every move of the all of the orbiting celestial body through here.Destroy enemy's core and server
+
+stat.shardchance = Lightning Chance
+stat.sharddamage = Lightning Damage
 
 "?"
 "Why are you there?"
