add file via upload

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,8 +1,8 @@
 mod.degradation.name = Degradation
-mod.degradation.description = A WIP 136 mindustry JAVA mod,I WAS SAID DONOT BUILD OR PLAY IN GITHUB >:(
+mod.degradation.description = A WIP 139 mindustry JAVA mod
 
-item.degradation-silver.name = Iron
-item.degradation-silver.description = Used in basic buildings construct.
+item.degradation-iron.name = Iron
+item.degradation-iron.description = Used in basic buildings construct.
 item.degradation-silver.name = Silver
 item.degradation-silver.description = Used in electricity transport and building construct.
 item.degradation-heavite.name = Heavite
@@ -16,8 +16,22 @@ block.degradation-concussion-alloy-smelter.name = Concussion Alloy Smelter
 block.degradation-concussion-alloy-smelter.description = Fuses silver and silicon to concussion alloy.
 block.degradation-heavite-compressor.name = Heavite Compressor
 block.degradation-heavite-compressor.description = Compress iron and graphite to heavite.
+block.degradation-boiler.name = Boiler
+block.degradation-boiler.description = Boils water into steam. Requires temperature.
+
+block.degradation-temperature-conduit.name = Temperature Conduit
+block.degradation-temperature-conduit.description = Conducts temperature. Used in conjunction with heaters and other temperature conduits.
+
+block.degradation-temperature-source.name = Temperature Source
+block.degradation-temperature-source.description = Infinitely outputs temperature. Sandbox only.
+block.degradation-temperature-void.name = Temperature Void
+block.degradation-temperature-void.description = Destroys inputted temperature. Sandbox only.
+
 block.degradation-stirling-generator.name = Stirling Generator
 block.degradation-stirling-generator.description = Generate power with ethylene vent.
+block.degradation-burning-heater.name = Burning Heater
+block.degradation-burning-heater.description = Heating by burning flammable materials, such as coal.
+
 block.degradation-ethylene-vent.name = Ethylene Vent
 block.degradation-quarry.name = Quarry
 block.degradation-quarry.description = mines front area of ores
