--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,88 +1,88 @@
-mod.degradation.name = Degradation
-mod.degradation.description = A WIP 139 mindustry JAVA mod
+mod.disintegration.name = disintegration
+mod.disintegration.description = A WIP 139 mindustry JAVA mod
 
-item.degradation-iron.name = Iron
-item.degradation-iron.description = Used in basic buildings construct.
-item.degradation-silver.name = Silver
-item.degradation-silver.description = Used in electricity transport and building construct.
-item.degradation-heavite.name = Heavite
-item.degradation-heavite.description = Used in hard defence and units.
-item.degradation-concussion-alloy.name = Concussion Alloy
-item.degradation-concussion-alloy.description = Used in electric turret and factorys build.
-item.degradation-iridium.name = Iridium
-item.degradation-iridium.description = Used in high-hardness buildings defence.
+item.disintegration-iron.name = Iron
+item.disintegration-iron.description = Used in basic buildings construct.
+item.disintegration-silver.name = Silver
+item.disintegration-silver.description = Used in electricity transport and building construct.
+item.disintegration-heavite.name = Heavite
+item.disintegration-heavite.description = Used in hard defence and units.
+item.disintegration-concussion-alloy.name = Concussion Alloy
+item.disintegration-concussion-alloy.description = Used in electric turret and factorys build.
+item.disintegration-iridium.name = Iridium
+item.disintegration-iridium.description = Used in high-hardness buildings defence.
 
-block.degradation-concussion-alloy-smelter.name = Concussion Alloy Smelter
-block.degradation-concussion-alloy-smelter.description = Fuses silver and silicon to concussion alloy.
-block.degradation-heavite-compressor.name = Heavite Compressor
-block.degradation-heavite-compressor.description = Compress iron and graphite to heavite.
-block.degradation-boiler.name = Boiler
-block.degradation-boiler.description = Boils water into steam. Requires temperature.
+block.disintegration-concussion-alloy-smelter.name = Concussion Alloy Smelter
+block.disintegration-concussion-alloy-smelter.description = Fuses silver and silicon to concussion alloy.
+block.disintegration-heavite-compressor.name = Heavite Compressor
+block.disintegration-heavite-compressor.description = Compress iron and graphite to heavite.
+block.disintegration-boiler.name = Boiler
+block.disintegration-boiler.description = Boils water into steam. Requires temperature.
 
-block.degradation-temperature-conduit.name = Temperature Conduit
-block.degradation-temperature-conduit.description = Conducts temperature. Used in conjunction with heaters and other temperature conduits.
+block.disintegration-temperature-conduit.name = Temperature Conduit
+block.disintegration-temperature-conduit.description = Conducts temperature. Used in conjunction with heaters and other temperature conduits.
 
-block.degradation-temperature-source.name = Temperature Source
-block.degradation-temperature-source.description = Infinitely outputs temperature. Sandbox only.
-block.degradation-temperature-void.name = Temperature Void
-block.degradation-temperature-void.description = Destroys inputted temperature. Sandbox only.
+block.disintegration-temperature-source.name = Temperature Source
+block.disintegration-temperature-source.description = Infinitely outputs temperature. Sandbox only.
+block.disintegration-temperature-void.name = Temperature Void
+block.disintegration-temperature-void.description = Destroys inputted temperature. Sandbox only.
 
-block.degradation-stirling-generator.name = Stirling Generator
-block.degradation-stirling-generator.description = Generate power with ethylene vent.
-block.degradation-burning-heater.name = Burning Heater
-block.degradation-burning-heater.description = Heating by burning flammable materials, such as coal.
+block.disintegration-stirling-generator.name = Stirling Generator
+block.disintegration-stirling-generator.description = Generate power with ethylene vent.
+block.disintegration-burning-heater.name = Burning Heater
+block.disintegration-burning-heater.description = Heating by burning flammable materials, such as coal.
 
-block.degradation-ethylene-vent.name = Ethylene Vent
-block.degradation-quarry.name = Quarry
-block.degradation-quarry.description = mines front area of ores
-block.degradation-axe.name =Axe
-block.degradation-axe.description = Fires quadriparts homing missiles at enemies.
-block.degradation-spherical-lightning.name = Sphercial Lightning
-block.degradation-spherical-lightning.description = Fires an arc ball at enemies.
-block.degradation-holy.name = Holy
-block.degradation-holy.description = Fires laser bolts that damage enemies and repair allied structures,precedence repair buildings when there are damaged buildings around.
-block.degradation-finspray.name = Finspray
-block.degradation-finspray.description = Fires matter dust at enemies.
-block.degradation-miner.name = Miner
-block.degradation-miner.description = Put mines on enemies' only way.
-block.degradation-sparkover.name = Sparkover
-block.degradation-sparkover.description = Shocks enemies when it's in range
-block.degradation-fracture.name = Fracture
-block.degradation-fracture.description = Shoots big plasma bullets.
+block.disintegration-ethylene-vent.name = Ethylene Vent
+block.disintegration-quarry.name = Quarry
+block.disintegration-quarry.description = mines front area of ores
+block.disintegration-axe.name =Axe
+block.disintegration-axe.description = Fires quadriparts homing missiles at enemies.
+block.disintegration-spherical-lightning.name = Sphercial Lightning
+block.disintegration-spherical-lightning.description = Fires an arc ball at enemies.
+block.disintegration-holy.name = Holy
+block.disintegration-holy.description = Fires laser bolts that damage enemies and repair allied structures,precedence repair buildings when there are damaged buildings around.
+block.disintegration-finspray.name = Finspray
+block.disintegration-finspray.description = Fires matter dust at enemies.
+block.disintegration-miner.name = Miner
+block.disintegration-miner.description = Put mines on enemies' only way.
+block.disintegration-sparkover.name = Sparkover
+block.disintegration-sparkover.description = Shocks enemies when it's in range
+block.disintegration-fracture.name = Fracture
+block.disintegration-fracture.description = Shoots big plasma bullets.
 
-block.degradation-iridium-wall.name = Iridium Wall
-block.degradation-iridium-wall.description = Protects structures from enemy projectiles, periodically releasing electric shards upon contact.
-block.degradation-iridium-wall-large.name = Large Iridium Wall
-block.degradation-iridium-wall-large.description = Protects structures from enemy projectiles, periodically releasing shards upon contact.
+block.disintegration-iridium-wall.name = Iridium Wall
+block.disintegration-iridium-wall.description = Protects structures from enemy projectiles, periodically releasing electric shards upon contact.
+block.disintegration-iridium-wall-large.name = Large Iridium Wall
+block.disintegration-iridium-wall-large.description = Protects structures from enemy projectiles, periodically releasing shards upon contact.
 
-block.degradation-ore-iridium.name = Iridium
-block.degradation-ore-silver.name = Silver
+block.disintegration-ore-iridium.name = Iridium
+block.disintegration-ore-silver.name = Silver
 
-unit.degradation-lancet.name = Lancet
-unit.degradation-lancet.description = Fires ion balls at nearby enemies.
-unit.degradation-raven.name = Raven
-unit.degradation-raven.description = Fires proton torpedoes at nearby enemies.
+unit.disintegration-lancet.name = Lancet
+unit.disintegration-lancet.description = Fires ion balls at nearby enemies.
+unit.disintegration-raven.name = Raven
+unit.disintegration-raven.description = Fires proton torpedoes at nearby enemies.
 
-unit.degradation-knife.name = Knife
-unit.degradation-knife.description = Launch stab attack at nearby enemies.
+unit.disintegration-knife.name = Knife
+unit.disintegration-knife.description = Launch stab attack at nearby enemies.
 
-unit.degradation-essence.name = Essence
-unit.degradation-essence.description = Fires ion balls at nearby enemies.
-unit.degradation-truth.name = Truth
-unit.degradation-truth.description = Fires ion lasers at nearby enemies.
-unit.degradation-solve.name = Solve
-unit.degradation-solve.description = Fires electric ion shells at nearby enemies.
+unit.disintegration-essence.name = Essence
+unit.disintegration-essence.description = Fires ion balls at nearby enemies.
+unit.disintegration-truth.name = Truth
+unit.disintegration-truth.description = Fires ion lasers at nearby enemies.
+unit.disintegration-solve.name = Solve
+unit.disintegration-solve.description = Fires electric ion shells at nearby enemies.
 
-status.degradation-sanded.name = Sanded
-status.degradation-electric-resonated.name = Electric Resonated
+status.disintegration-sanded.name = Sanded
+status.disintegration-electric-resonated.name = Electric Resonated
 status.corroded.name = Corroded
 
-planet.degradation-omurlo.name = Omurlo
+planet.disintegration-omurlo.name = Omurlo
 
-sector.degradation-launching-area.name = Launching Area
-sector.degradation-launching-area.description = This is the third planet's begin,take some irons there.
-sector.degradation-planetary-monitoring-center.name = Planetary Monitoring Center
-sector.degradation-planetary-monitoring-center.description = The enemy detects every move of the all of the orbiting celestial body through here.Destroy enemy's core and server
+sector.disintegration-launching-area.name = Launching Area
+sector.disintegration-launching-area.description = This is the third planet's begin,take some irons there.
+sector.disintegration-planetary-monitoring-center.name = Planetary Monitoring Center
+sector.disintegration-planetary-monitoring-center.description = The enemy detects every move of the all of the orbiting celestial body through here.Destroy enemy's core and server
 
 stat.shardchance = Lightning Chance
 stat.sharddamage = Lightning Damage
