Laser System, lots things

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -29,12 +29,20 @@ block.disintegration-temperature-void.description = Destroys inputted temperatur
 
 block.disintegration-stirling-generator.name = Stirling Generator
 block.disintegration-stirling-generator.description = Generate power with ethylene vent.
+
 block.disintegration-burning-heater.name = Burning Heater
 block.disintegration-burning-heater.description = Heating by burning flammable materials, such as coal.
 
+block.disintegration-laser-device.name = Laser Device
+block.disintegration-laser-device.description = Genearate laser by power
+block.disintegration-laser-reflector.name = Laser Reflector
+block.disintegration-laser-reflector.description = Redirecting laser and extends laser's length
+
 block.disintegration-ethylene-vent.name = Ethylene Vent
+
 block.disintegration-quarry.name = Quarry
 block.disintegration-quarry.description = mines front area of ores
+
 block.disintegration-axe.name =Axe
 block.disintegration-axe.description = Fires quadriparts homing missiles at enemies.
 block.disintegration-spherical-lightning.name = Sphercial Lightning
@@ -49,6 +57,8 @@ block.disintegration-sparkover.name = Sparkover
 block.disintegration-sparkover.description = Shocks enemies when it's in range
 block.disintegration-fracture.name = Fracture
 block.disintegration-fracture.description = Shoots big plasma bullets.
+block.disintegration-permeation.name = Permeation
+block.disintegration-permeation.description = Fires three close-range piercing bullets at nearby enemies.
 
 block.disintegration-iridium-wall.name = Iridium Wall
 block.disintegration-iridium-wall.description = Protects structures from enemy projectiles, periodically releasing electric shards upon contact.
@@ -86,6 +96,9 @@ sector.disintegration-planetary-monitoring-center.description = The enemy detect
 
 stat.shardchance = Lightning Chance
 stat.sharddamage = Lightning Damage
+
+bar.laser = Laser
+bar.laseramount = Laser: {0}
 
 "?"
 "Why are you there?"
