Laser System part 2

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -34,21 +34,25 @@ block.disintegration-burning-heater.name = Burning Heater
 block.disintegration-burning-heater.description = Heating by burning flammable materials, such as coal.
 
 block.disintegration-laser-device.name = Laser Device
-block.disintegration-laser-device.description = Genearate laser by power
+block.disintegration-laser-device.description = Genearate laser by power.
 block.disintegration-laser-reflector.name = Laser Reflector
-block.disintegration-laser-reflector.description = Redirecting laser and extends laser's length
+block.disintegration-laser-reflector.description = Redirecting laser and extends laser's length.
+block.disintegration-laser-source.name = Laser Source
+block.disintegration-laser-source.description = Infinitely outputs laser. Sandbox only.
+block.disintegration-laser-router.name = Laser Router
+block.disintegration-laser-router.description = Splitting laser and extends laser's length.
 
 block.disintegration-ethylene-vent.name = Ethylene Vent
 
 block.disintegration-quarry.name = Quarry
-block.disintegration-quarry.description = mines front area of ores
+block.disintegration-quarry.description = mines front area of ores.
 
-block.disintegration-axe.name =Axe
+block.disintegration-axe.name = Axe
 block.disintegration-axe.description = Fires quadriparts homing missiles at enemies.
 block.disintegration-spherical-lightning.name = Sphercial Lightning
 block.disintegration-spherical-lightning.description = Fires an arc ball at enemies.
 block.disintegration-holy.name = Holy
-block.disintegration-holy.description = Fires laser bolts that damage enemies and repair allied structures,precedence repair buildings when there are damaged buildings around.
+block.disintegration-holy.description = Fires laser bolts that damage enemies and repair allied structures.
 block.disintegration-finspray.name = Finspray
 block.disintegration-finspray.description = Fires matter dust at enemies.
 block.disintegration-miner.name = Miner
@@ -99,6 +103,7 @@ stat.sharddamage = Lightning Damage
 
 bar.laser = Laser
 bar.laseramount = Laser: {0}
+bar.laserpercent = Laser: {0} ({1}%)
 
 "?"
 "Why are you there?"
