--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,5 +1,5 @@
 mod.disintegration.name = disintegration
-mod.disintegration.description = A WIP 139 mindustry JAVA mod
+mod.disintegration.description = A WIP V7 mindustry JAVA mod
 
 item.disintegration-iron.name = Iron
 item.disintegration-iron.description = Used in basic buildings construct.
@@ -11,6 +11,11 @@ item.disintegration-concussion-alloy.name = Concussion Alloy
 item.disintegration-concussion-alloy.description = Used in electric turret and factorys build.
 item.disintegration-iridium.name = Iridium
 item.disintegration-iridium.description = Used in high-hardness buildings defence.
+
+liquid.disintegration-steam.name = steam
+liquid.disintegration-steam.description = From boiling water.
+liquid.disintegration-liquid-crystal.name = Liquid Crystal
+liquid.disintegration-liquid-crystal.description = Used in advanced material production and coolant in reactors.
 
 block.disintegration-concussion-alloy-smelter.name = Concussion Alloy Smelter
 block.disintegration-concussion-alloy-smelter.description = Fuses silver and silicon to concussion alloy.
@@ -28,10 +33,13 @@ block.disintegration-temperature-void.name = Temperature Void
 block.disintegration-temperature-void.description = Destroys inputted temperature. Sandbox only.
 
 block.disintegration-stirling-generator.name = Stirling Generator
-block.disintegration-stirling-generator.description = Generate power with ethylene vent.
+block.disintegration-stirling-generator.description = Generates power when placed on vents. Produces a small amount of water.
 
 block.disintegration-burning-heater.name = Burning Heater
 block.disintegration-burning-heater.description = Heating by burning flammable materials, such as coal.
+
+block.disintegration-pressure-drill.name = Pressure Drill
+block.disintegration-pressure-drill.description = When placed on ore, outputs items at a slow pace indefinitely. Only capable of mining basic resources.
 
 block.disintegration-laser-device.name = Laser Device
 block.disintegration-laser-device.description = Genearate laser by power.
@@ -41,6 +49,8 @@ block.disintegration-laser-source.name = Laser Source
 block.disintegration-laser-source.description = Infinitely outputs laser. Sandbox only.
 block.disintegration-laser-router.name = Laser Router
 block.disintegration-laser-router.description = Splitting laser and extends laser's length.
+block.disintegration-excitation-reactor.name = Excitation Reactor
+block.disintegration-excitation-reactor.description = Generates large amounts of power when laser irradiated. Requires liquid crystal as a colloid. Power output and liquid crystal requirements are proportional to heat input.\nExplodes if insufficient liquid crystal is provided.
 
 block.disintegration-ethylene-vent.name = Ethylene Vent
 
@@ -105,5 +115,9 @@ bar.laser = Laser
 bar.laseramount = Laser: {0}
 bar.laserpercent = Laser: {0} ({1}%)
 
-"?"
-"Why are you there?"
+unit.temperatureunits = temperature units
+unit.temperatureunitspersecond = temperature units/sec
+unit.laserunits = laser units
+
+a = "?"
+b = "Why are you there?"
