--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -34,6 +34,8 @@ block.disintegration-temperature-void.description = Destroys inputted temperatur
 
 block.disintegration-stirling-generator.name = Stirling Generator
 block.disintegration-stirling-generator.description = Generates power when placed on vents. Produces a small amount of water.
+block.disintegration-neoplasm-generator.name = Neoplasm Generator
+block.disintegration-neoplasm-generator.description = Generates power with neoplasm. Will inflect nearby blocks.
 
 block.disintegration-burning-heater.name = Burning Heater
 block.disintegration-burning-heater.description = Heating by burning flammable materials, such as coal.
@@ -53,6 +55,10 @@ block.disintegration-excitation-reactor.name = Excitation Reactor
 block.disintegration-excitation-reactor.description = Generates large amounts of power when laser irradiated. Requires liquid crystal as a colloid. Power output and liquid crystal requirements are proportional to heat input.\nExplodes if insufficient liquid crystal is provided.
 
 block.disintegration-ethylene-vent.name = Ethylene Vent
+block.disintegration-green-ice.name = Green Ice
+block.disintegration-green-ice-wall.name = Green Ice Wall
+block.disintegration-green-floor.name = Green Floor
+block.disintegration-ice-water.name = Ice Water
 
 block.disintegration-quarry.name = Quarry
 block.disintegration-quarry.description = mines front area of ores.
@@ -79,6 +85,9 @@ block.disintegration-iridium-wall.description = Protects structures from enemy p
 block.disintegration-iridium-wall-large.name = Large Iridium Wall
 block.disintegration-iridium-wall-large.description = Protects structures from enemy projectiles, periodically releasing shards upon contact.
 
+block.disintegration-core-pedestal.name = Core: Pedestal
+block.disintegration-core-pedestal.description = Core of the base. Once destroyed, the sector is lost.
+
 block.disintegration-ore-iridium.name = Iridium
 block.disintegration-ore-silver.name = Silver
 
@@ -96,6 +105,9 @@ unit.disintegration-truth.name = Truth
 unit.disintegration-truth.description = Fires ion lasers at nearby enemies.
 unit.disintegration-solve.name = Solve
 unit.disintegration-solve.description = Fires electric ion shells at nearby enemies.
+
+unit.disintegration-separate.name = Separate
+unit.disintegration-separate.description = Builds structures to defend the Pedestal core. Repairs structures with laser bolts.
 
 status.disintegration-sanded.name = Sanded
 status.disintegration-electric-resonated.name = Electric Resonated
