--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ ext{
     mindustryVersion = 'v140.1'
     jabelVersion = "93fde537c7"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
+    gamePath = /*your own game path*/ "D:/mdt/140.2/Mindustry.exe"
+    modPath = /*your own mod path*/ "C:/Users/yizhe/AppData/Roaming/Mindustry/mods"
 }
 
 //java 8 backwards compatibility flag
@@ -46,7 +48,7 @@ task jarAndroid{
     dependsOn "jar"
 
     doLast{
-        if(!sdkRoot || !new File(sdkRoot).exists()) throw new GradleException("No valid Android SDK found. Ensure that ANDROID_HOME is set to your Android SDK directory.");
+        if(!sdkRoot || !new File(sdkRoot).exists()) throw new GradleException("No valid Android SDK found. Ensure that ANDROID_HOME is set to your Android SDK directory.")
 
         def platformRoot = new File("$sdkRoot/platforms/").listFiles().sort().reverse().find{ f -> new File(f, "android.jar").exists()}
 
@@ -74,6 +76,22 @@ jar{
 
     from("assets/"){
         include "**"
+    }
+}
+
+task testMod {
+    dependsOn jar
+    doLast {
+        delete{
+            delete "${modPath}/${project.archivesBaseName}Desktop.jar"
+        }
+        copy {
+            from "$buildDir/libs/${project.archivesBaseName}Desktop.jar"
+            into modPath
+        }
+        exec {
+            commandLine 'cmd', "/c", "${gamePath}"
+        }
     }
 }
 
