--- a/.github/workflows/commitTest.yml
+++ b/.github/workflows/commitTest.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         java-version: 17
     - name: Build mod jar
-      run: ./gradlew jar
+      run: /gradlew jar
     - name: Upload built jar file
       uses: actions/upload-artifact@v2
       with:
