--- a/.github/workflows/prTest.yml
+++ b/.github/workflows/prTest.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         java-version: 16
     - name: Build mod jar
-      run: /gradlew deploy
+      run: ./gradlew :main:deploy
     - name: Upload built jar file
       uses: actions/upload-artifact@v2
       with:
