--- a/.github/workflows/commitTest.yml
+++ b/.github/workflows/commitTest.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         java-version: 17
     - name: Build mod jar
-      run: ./gradlew :main:deploy
+      run: sudo ./gradlew deploy
     - name: Upload built jar file
       uses: actions/upload-artifact@v2
       with:
