--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -9,13 +9,19 @@ item.disintegration-heavite.name = Heavite
 item.disintegration-heavite.description = Used in hard defence and units.
 item.disintegration-concussion-alloy.name = Concussion Alloy
 item.disintegration-concussion-alloy.description = Used in electric turret and factorys build.
+item.disintegration-ionic-alloy.name = Ionic Alloy
+item.disintegration-ionic-alloy.description = Used in electric turret and ammo.
 item.disintegration-iridium.name = Iridium
 item.disintegration-iridium.description = Used in high-hardness buildings defence.
+item.disintegration-stone.name = Stone
+item.disintegration-stone.description = Basic material. Can be ground into sand.
 
 liquid.disintegration-steam.name = steam
 liquid.disintegration-steam.description = From boiling water.
 liquid.disintegration-liquid-crystal.name = Liquid Crystal
 liquid.disintegration-liquid-crystal.description = Used in advanced material production and coolant in reactors.
+liquid.disintegration-oxygen.name = Oxygen
+liquid.disintegration-oxygen.description = Used as an oxidizing agent in material production, and as fuel. Moderately explosive.
 
 block.disintegration-concussion-alloy-smelter.name = Concussion Alloy Smelter
 block.disintegration-concussion-alloy-smelter.description = Fuses silver and silicon to concussion alloy.
@@ -23,6 +29,10 @@ block.disintegration-heavite-compressor.name = Heavite Compressor
 block.disintegration-heavite-compressor.description = Compress iron and graphite to heavite.
 block.disintegration-boiler.name = Boiler
 block.disintegration-boiler.description = Boils water into steam. Requires temperature.
+block.disintegration-rock-extractor.name = Rock Extractor
+block.disintegration-rock-extractor.description = Extract rocks from the ground.
+block.disintegration-electrolyser.name = Electrolyser
+block.disintegration-electrolyser.description = Converts water into hydrogen and ozone gas. Outputs resulting gases in two opposite directions, marked by corresponding colors.
 
 block.disintegration-temperature-conduit.name = Temperature Conduit
 block.disintegration-temperature-conduit.description = Conducts temperature. Used in conjunction with heaters and other temperature conduits.
@@ -36,6 +46,8 @@ block.disintegration-stirling-generator.name = Stirling Generator
 block.disintegration-stirling-generator.description = Generates power when placed on vents. Produces a small amount of water.
 block.disintegration-neoplasm-generator.name = Neoplasm Generator
 block.disintegration-neoplasm-generator.description = Generates power with neoplasm. Will inflect nearby blocks.
+block.disintegration-solar-panel.name = Solar Panel
+block.disintegration-solar-panel.description = Generates power with sunlight.
 
 block.disintegration-burning-heater.name = Burning Heater
 block.disintegration-burning-heater.description = Heating by burning flammable materials, such as coal.
@@ -59,24 +71,32 @@ block.disintegration-green-ice.name = Green Ice
 block.disintegration-green-ice-wall.name = Green Ice Wall
 block.disintegration-green-floor.name = Green Floor
 block.disintegration-ice-water.name = Ice Water
+block.disintegration-light-space.name = Space Station Space
+block.disintegration-space-station-floor.name = Space Station Floor
 
 block.disintegration-quarry.name = Quarry
 block.disintegration-quarry.description = mines front area of ores.
 
 block.disintegration-axe.name = Axe
 block.disintegration-axe.description = Fires quadriparts homing missiles at enemies.
-block.disintegration-spherical-lightning.name = Sphercial Lightning
-block.disintegration-spherical-lightning.description = Fires an arc ball at enemies.
+block.disintegration-voltage.name = Voltage
+block.disintegration-voltage.description = Fires an arc ball at enemies.
 block.disintegration-holy.name = Holy
 block.disintegration-holy.description = Fires laser bolts that damage enemies and repair allied structures.
 block.disintegration-finspray.name = Finspray
 block.disintegration-finspray.description = Fires matter dust at enemies.
-block.disintegration-miner.name = Miner
-block.disintegration-miner.description = Put mines on enemies' only way.
+block.disintegration-ambush.name = Ambush
+block.disintegration-ambush.description = Put mines on enemies' way.
 block.disintegration-sparkover.name = Sparkover
 block.disintegration-sparkover.description = Shocks enemies when it's in range
 block.disintegration-fracture.name = Fracture
 block.disintegration-fracture.description = Shoots big plasma bullets.
+block.disintegration-blade.name = Blade
+block.disintegration-blade.description = Shoots homing missiles.
+block.disintegration-encourage.name = Encourage
+block.disintegration-encourage.description = Shoots big tungsten blasts.
+block.disintegration-aegis.name = Aegis
+block.disintegration-aegis.description = Fires laser bolts that damage enemies and repair allied structures.
 block.disintegration-permeation.name = Permeation
 block.disintegration-permeation.description = Fires three close-range piercing bullets at nearby enemies.
 
@@ -87,6 +107,33 @@ block.disintegration-iridium-wall-large.description = Protects structures from e
 
 block.disintegration-core-pedestal.name = Core: Pedestal
 block.disintegration-core-pedestal.description = Core of the base. Once destroyed, the sector is lost.
+block.disintegration-space-station-core.name = Space Station Core
+block.disintegration-space-station-core.description = Core of the space station. Once destroyed, the sector is lost.
+
+block.disintegration-space-station-builder-1.name = Space Station Builder 1
+block.disintegration-space-station-builder-1.description = Build 1x1 range space station in it's front.
+block.disintegration-space-station-builder-3.name = Space Station Builder 3
+block.disintegration-space-station-builder-3.description = Build 3x3 range space station in it's front.
+block.disintegration-space-station-builder-5.name = Space Station Builder 5
+block.disintegration-space-station-builder-5.description = Build 5x5 range space station in it's front.
+block.disintegration-space-station-builder-7.name = Space Station Builder 7
+block.disintegration-space-station-builder-7.description = Build 7x7 range space station in it's front.
+block.disintegration-space-station-builder-9.name = Space Station Builder 9
+block.disintegration-space-station-builder-9.description = Build 9x9 range space station in it's front.
+
+block.disintegration-space-station-breaker-1.name = Space Station Breaker 1
+block.disintegration-space-station-breaker-1.description = Break 1x1 range space station.
+block.disintegration-space-station-breaker-3.name = Space Station Breaker 3
+block.disintegration-space-station-breaker-3.description = Break 3x3 range space station.
+block.disintegration-space-station-breaker-5.name = Space Station Breaker 5
+block.disintegration-space-station-breaker-5.description = Break 5x5 range space station.
+block.disintegration-space-station-breaker-7.name = Space Station Breaker 7
+block.disintegration-space-station-breaker-7.description = Break 7x7 range space station.
+block.disintegration-space-station-breaker-9.name = Space Station Breaker 9
+block.disintegration-space-station-breaker-9.description = Break 9x9 range space station.
+
+block.disintegration-blast-mine.name = Blast Mine
+block.disintegration-blast-mine.description = Blasts upon enemy unit contact.
 
 block.disintegration-ore-iridium.name = Iridium
 block.disintegration-ore-silver.name = Silver
@@ -108,6 +155,8 @@ unit.disintegration-solve.description = Fires electric ion shells at nearby enem
 
 unit.disintegration-separate.name = Separate
 unit.disintegration-separate.description = Builds structures to defend the Pedestal core. Repairs structures with laser bolts.
+unit.disintegration-space-station-drone.name = Space Station Drone
+unit.disintegration-space-station-drone.description = Builds structures to defend the space station. Repairs structures with a beam.
 
 status.disintegration-sanded.name = Sanded
 status.disintegration-electric-resonated.name = Electric Resonated
