我，不 想 更 新！！！↗↗↗↗↗

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -13,8 +13,6 @@ item.disintegration-ionic-alloy.name = Ionic Alloy
 item.disintegration-ionic-alloy.description = Used in electric turret and ammo.
 item.disintegration-iridium.name = Iridium
 item.disintegration-iridium.description = Used in high-hardness buildings defence.
-item.disintegration-stone.name = Stone
-item.disintegration-stone.description = Basic material. Can be ground into sand.
 
 liquid.disintegration-steam.name = steam
 liquid.disintegration-steam.description = From boiling water.
@@ -33,14 +31,15 @@ block.disintegration-rock-extractor.name = Rock Extractor
 block.disintegration-rock-extractor.description = Extract rocks from the ground.
 block.disintegration-electrolyser.name = Electrolyser
 block.disintegration-electrolyser.description = Converts water into hydrogen and ozone gas. Outputs resulting gases in two opposite directions, marked by corresponding colors.
+block.disintegration-silicon-refiner.name = Silicon Refiner
+block.disintegration-silicon-refiner.description = Refines silicon from sand and coal.
+block.disintegration-graphite-compressor.name = Graphite Compressor
+block.disintegration-graphite-compressor.description = Compresses coal into graphite with high pressure.
 
-block.disintegration-temperature-conduit.name = Temperature Conduit
-block.disintegration-temperature-conduit.description = Conducts temperature. Used in conjunction with heaters and other temperature conduits.
-
-block.disintegration-temperature-source.name = Temperature Source
-block.disintegration-temperature-source.description = Infinitely outputs temperature. Sandbox only.
-block.disintegration-temperature-void.name = Temperature Void
-block.disintegration-temperature-void.description = Destroys inputted temperature. Sandbox only.
+block.disintegration-temperature-conduit.name = Heat Conduit
+block.disintegration-temperature-conduit.description = Conducts heat. Used in conjunction with heaters and other temperature conduits.
+block.disintegration-heat-conduit-router.name = Heat Conduit Router
+block.disintegration-heat-conduit-router.description = Spreads heat in three output directions.
 
 block.disintegration-stirling-generator.name = Stirling Generator
 block.disintegration-stirling-generator.description = Generates power when placed on vents. Produces a small amount of water.
@@ -91,6 +90,8 @@ block.disintegration-sparkover.name = Sparkover
 block.disintegration-sparkover.description = Shocks enemies when it's in range
 block.disintegration-fracture.name = Fracture
 block.disintegration-fracture.description = Shoots big plasma bullets.
+block.disintegration-dissolve.name = Dissolve
+block.disintegration-dissolve.description = Fires a persistent laser beam at nearby enemies.
 block.disintegration-blade.name = Blade
 block.disintegration-blade.description = Shoots homing missiles.
 block.disintegration-encourage.name = Encourage
@@ -134,6 +135,8 @@ block.disintegration-space-station-breaker-9.description = Break 9x9 range space
 
 block.disintegration-blast-mine.name = Blast Mine
 block.disintegration-blast-mine.description = Blasts upon enemy unit contact.
+block.disintegration-repair-drone-station.name = Repair Drone Station
+block.disintegration-repair-drone-station.description = Constructs repair drones.\n Drones automatically repairs blocks in its vicinity.
 
 block.disintegration-ore-iridium.name = Iridium
 block.disintegration-ore-silver.name = Silver
@@ -176,9 +179,4 @@ bar.laser = Laser
 bar.laseramount = Laser: {0}
 bar.laserpercent = Laser: {0} ({1}%)
 
-unit.temperatureunits = temperature units
-unit.temperatureunitspersecond = temperature units/sec
 unit.laserunits = laser units
-
-a = "?"
-b = "Why are you there?"
