--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,10 @@ repositories{
 
 ext{
     //the build number that this mod is made for
-    mindustryVersion = 'v144.1'
+    mindustryVersion = 'v145'
     jabelVersion = "0.9.0"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
-    gamePath = /*your own game path*/ "D:/mdt/141/Mindustry.exe"
+    gamePath = /*your own game path*/ "D:/mdt/V7-be/Mindustry.exe"
     modPath = /*your own mod path*/ "C:/Users/yizhe/AppData/Roaming/Mindustry/mods"
 }
 
@@ -29,6 +29,8 @@ allprojects{
 }
 
 dependencies{
+    implementation 'org.jetbrains:annotations:20.1.0'
+    implementation 'org.jetbrains:annotations:20.1.0'
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryVersion"
 
