--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -36,6 +36,23 @@ block.disintegration-silicon-refiner.description = Refines silicon from sand and
 block.disintegration-graphite-compressor.name = Graphite Compressor
 block.disintegration-graphite-compressor.description = Compresses coal into graphite with high pressure.
 
+block.disintegration-iron-conveyor.name = Iron Conveyor
+block.disintegration-iron-conveyor.description = Transports items forward.
+block.disintegration-iron-bridge-conveyor.name = Iron Bridge Conveyor
+block.disintegration-iron-bridge-conveyor.description = Transports items over terrain or buildings.
+block.disintegration-alternate-overflow-gate.name = Alternate Overflow Gate
+block.disintegration-alternate-sorter.description = Only outputs items to the left and right if the front path is blocked.  \n change mode when clicked
+block.disintegration-iron-sorter.name = Iron Sorter
+block.disintegration-iron-sorter.description =  If an input item matches the selection, it passes forward. Otherwise, the item is outputted to the left and right.
+block.disintegration-inverted-iron-sorter.name = Inverted Iron Sorter
+block.disintegration-inverted-iron-sorter.description = Similar to a standard sorter, but outputs selected items to the sides instead.
+block.disintegration-fast-junction.name = Fast Junction
+block.disintegration-fast-junction.description = Acts as a bridge for two crossing conveyor belts.
+block.disintegration-fast-router.name = Fast Router
+block.disintegration-fast-router.description = Distributes input items to 3 output directions equally.
+block.disintegration-iridium-conveyor.name = Iridium Conveyor
+block.disintegration-iridium-conveyor.description = Transports items forward. Faster than iron conveyor.
+
 block.disintegration-temperature-conduit.name = Heat Conduit
 block.disintegration-temperature-conduit.description = Conducts heat. Used in conjunction with heaters and other temperature conduits.
 block.disintegration-heat-conduit-router.name = Heat Conduit Router
@@ -105,6 +122,22 @@ block.disintegration-iridium-wall.name = Iridium Wall
 block.disintegration-iridium-wall.description = Protects structures from enemy projectiles, periodically releasing electric shards upon contact.
 block.disintegration-iridium-wall-large.name = Large Iridium Wall
 block.disintegration-iridium-wall-large.description = Protects structures from enemy projectiles, periodically releasing shards upon contact.
+
+block.disintegration-payload-constructor.name = Block Constructor
+block.disintegration-payload-constructor.description = Block Constructor
+block.disintegration-large-payload-constructor.name = Large Block Constructor
+block.disintegration-large-payload-constructor.description = Block Constructor
+block.disintegration-payload-loader.name = Block Loader
+block.disintegration-payload-loader.description = Load liquids and items into blocks.
+block.disintegration-payload-unloader.name = Block Unloader
+block.disintegration-payload-unloader.description = Unloads liquids and items from blocks.
+block.disintegration-payload-deconstructor.name = Payload Deconstructor
+block.disintegration-payload-deconstructor.description = Payload Deconstructor
+
+block.disintegration-assembler-construct-module.name = Assembler Construct Module
+block.disintegration-assembler-construct-module.description = Assist unit assembler assemble unit. Increase the assembly speed
+block.disintegration-assembler-expand-interface-module.name = Assembler Interface Module
+block.disintegration-assembler-expand-interface-module.description = Used as assembler payload input.
 
 block.disintegration-core-pedestal.name = Core: Pedestal
 block.disintegration-core-pedestal.description = Core of the base. Once destroyed, the sector is lost.
