--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories{
 
 ext{
     //the build number that this mod is made for
-    mindustryVersion = 'v145'
+    mindustryVersion = 'v146'
     jabelVersion = "0.9.0"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
     gamePath = /*your own game path*/ "D:/mdt/V7/Mindustry.exe"
@@ -60,7 +60,7 @@ task jarAndroid{
         def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect{ "--classpath $it.path" }.join(" ")
 
         //dex and desugar files - this requires d8 in your PATH
-        "d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
+        "$sdkRoot/build-tools/34.0.0/d8.bat $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
                 .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
     }
 }
@@ -81,22 +81,6 @@ jar{
     }
 }
 
-task testMod {
-    dependsOn jar
-    doLast {
-        delete{
-            delete "${modPath}/${project.archivesBaseName}Desktop.jar"
-        }
-        copy {
-            from "$buildDir/libs/${project.archivesBaseName}Desktop.jar"
-            into modPath
-        }
-        exec {
-            commandLine 'cmd', "/c", "${gamePath}"
-        }
-    }
-}
-
 task deploy(type: Jar){
     dependsOn jarAndroid
     dependsOn jar
@@ -108,6 +92,22 @@ task deploy(type: Jar){
         delete{
             delete "$buildDir/libs/${project.archivesBaseName}Desktop.jar"
             delete "$buildDir/libs/${project.archivesBaseName}Android.jar"
+        }
+    }
+}
+
+task testMod {
+    dependsOn deploy
+    doLast {
+        delete{
+            delete "${modPath}/${project.archivesBaseName}.jar"
+        }
+        copy {
+            from "$buildDir/libs/${project.archivesBaseName}.jar"
+            into modPath
+        }
+        exec {
+            commandLine 'cmd', "/c", "${gamePath}"
         }
     }
 }
