--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,9 @@ task jarAndroid{
         //collect dependencies needed for desugaring
         def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect{ "--classpath $it.path" }.join(" ")
 
+        def d8C = System.properties['os.name'].toLowerCase().contains('win') ? "$sdkRoot/build-tools/34.0.0/d8.bat" : "d8"
         //dex and desugar files - this requires d8 in your PATH
-        "$buildDir/libs/d8.bat $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
+        "$d8C $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar"
                 .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
     }
 }
