钢铁是怎样炼成的

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,6 +1,9 @@
 mod.disintegration.name = disintegration
 mod.disintegration.description = A WIP V7 mindustry JAVA mod
 
+spacestation = Space Station
+spacestationwhitespace = true
+
 item.disintegration-iron.name = Iron
 item.disintegration-iron.description = Used in basic buildings construct.
 item.disintegration-silver.name = Silver
